# CovEngineV2

./: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CovEngineV2.sln  CovEngineV2.spec  CovEngineV2_OneFile.spec  FAQ.md  INSTALL.vcxproj  LICENSE  README.md  SECURITY.md  build.bat  build.py  build_all.vcxproj  build_backend.bat  build_backend_alt.bat  create_restore_point.bat  main.cpp
.github/workflows/: cmake.yml
backend/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  advanced_tweaks.cpp  build_all.vcxproj.filters  build_backend_fix.bat  build_final.bat  cmake_install.cmake  install_dependencies.vcxproj  install_dependencies.vcxproj.filters  main.cpp  registry_utils.cpp  tweaks.cpp  tweaks.h  tweaks.h.bak  tweaks_gaming.cpp  tweaks_missing.cpp  tweaks_performance.cpp  tweaks_privacy.cpp  tweaks_security.cpp  tweaks_utils.cpp
backend/backend/: ALL_BUILD.vcxproj.filters  CEV2.sln  CEV2.vcxproj  CEV2.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
backend/backend/CEV2.dir/Release/CEV2.tlog/: CEV2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/nlohmann/: json.hpp
docs/: GITHUB_WORKFLOW.md  README.md  tweaks
frontend/: CMakeLists.txt  build_backend.bat  error.txt  main.py  requirements.txt  spoofer_backend.cpp
frontend/core/: bc.py  tw_mg.py
frontend/ui/: gl_st.py  gr_cs.py  hr.py  main_window.py  mn_wd.py  pe_de.py  pe_ff.py  pe_he.py  pe_se.py  pe_sm.py  pe_sp.py  pe_ts.py  sr.py  tm.py
frontend/ui/tweaks/: tw_base.py  tw_ge.py  tw_pe.py  tw_py.py  tw_sy.py
